--- a/umap/static/umap/locale/br.json
+++ b/umap/static/umap/locale/br.json
@@ -45,7 +45,6 @@
     "Cache proxied request": "Cache proxied request",
     "Caption": "Alc'hwez",
     "Center map on your location": "Kreizañ ar gartenn war al lec'h m'emaoc'h",
-    "Change map background": "Cheñch foñs ar gartenn",
     "Change tilelayers": "Cheñch foñs ar gartenn",
     "Change": "Kemmañ",
     "Choose the data format": "Diuzañ furmad ar roadennoù",
@@ -457,7 +456,6 @@
     "Choose this dataset": "Dibab an hollad cheñchamantoù-mañ",
     "GeoDataMine: thematic data from OpenStreetMap": "GeoDataMine: thematic data from OpenStreetMap",
     "Choose a theme": "Dibab un tem",
-    "Symplify all geometries to points": "Symplify all geometries to points",
     "Choose this data": "Dibab ar roadennoù-mañ",
     "Search admin boundary": "Search admin boundary",
     "Please choose a theme and a boundary first.": "Please choose a theme and a boundary first.",
@@ -538,5 +536,12 @@
     "Images": "Images",
     "Iframes": "Iframes",
     "Tags": "Tags",
-    "Geocode": "Geocode"
+    "Geocode": "Geocode",
+    "Display the back to home icon": "Display the back to home icon",
+    "Do you want to display layer switcher in caption bar?": "Do you want to display layer switcher in caption bar?",
+    "Simplify all geometries to points": "Simplify all geometries to points",
+    "Back to list": "Back to list",
+    "Toggle rule": "Toggle rule",
+    "Delete rule": "Delete rule",
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
 }
