--- a/umap/static/umap/locale/ca.json
+++ b/umap/static/umap/locale/ca.json
@@ -45,7 +45,6 @@
     "Cache proxied request": "Petició proxy en memòria cau",
     "Caption": "Llegenda",
     "Center map on your location": "Centra el mapa a la vostra ubicació",
-    "Change map background": "Canvia el fons del mapa",
     "Change tilelayers": "Canvia les capes de tessel·les",
     "Change": "Change",
     "Choose the data format": "Trieu el format de dades",
@@ -540,5 +539,9 @@
     "Geocode": "Geocode",
     "Display the back to home icon": "Display the back to home icon",
     "Do you want to display layer switcher in caption bar?": "Do you want to display layer switcher in caption bar?",
-    "Simplify all geometries to points": "Simplify all geometries to points"
+    "Simplify all geometries to points": "Simplify all geometries to points",
+    "Back to list": "Back to list",
+    "Toggle rule": "Toggle rule",
+    "Delete rule": "Delete rule",
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
 }
