--- a/umap/static/umap/locale/gl.json
+++ b/umap/static/umap/locale/gl.json
@@ -45,7 +45,6 @@
     "Cache proxied request": "Solicitude de proxy da memoria tobo",
     "Caption": "Lenda",
     "Center map on your location": "Centrar o mapa na túa posición",
-    "Change map background": "Cambiar o mapa do fondo",
     "Change tilelayers": "Cambiar as capas de teselas",
     "Change": "Cambiar",
     "Choose the data format": "Escoller o formato de datos",
@@ -540,5 +539,9 @@
     "Geocode": "Geocode",
     "Display the back to home icon": "Display the back to home icon",
     "Do you want to display layer switcher in caption bar?": "Do you want to display layer switcher in caption bar?",
-    "Simplify all geometries to points": "Simplify all geometries to points"
+    "Simplify all geometries to points": "Simplify all geometries to points",
+    "Back to list": "Back to list",
+    "Toggle rule": "Toggle rule",
+    "Delete rule": "Delete rule",
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
 }
