--- a/umap/static/umap/locale/it.json
+++ b/umap/static/umap/locale/it.json
@@ -45,7 +45,6 @@
     "Cache proxied request": "Usa la cache per le richieste proxy",
     "Caption": "Didascalia",
     "Center map on your location": "Centra la mappa sulla tua posizione",
-    "Change map background": "Cambia la mappa di sfondo",
     "Change tilelayers": "Cambia i livelli di sfondo",
     "Change": "Cambia",
     "Choose the data format": "Scegli il formato dati",
@@ -540,5 +539,9 @@
     "Geocode": "Geocode",
     "Display the back to home icon": "Display the back to home icon",
     "Do you want to display layer switcher in caption bar?": "Do you want to display layer switcher in caption bar?",
-    "Simplify all geometries to points": "Simplify all geometries to points"
+    "Simplify all geometries to points": "Simplify all geometries to points",
+    "Back to list": "Back to list",
+    "Toggle rule": "Toggle rule",
+    "Delete rule": "Delete rule",
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
 }
