--- a/umap/static/umap/locale/pl.json
+++ b/umap/static/umap/locale/pl.json
@@ -45,7 +45,6 @@
     "Cache proxied request": "Zapytanie pośredniczące pamięci podręcznej",
     "Caption": "Podpis",
     "Center map on your location": "Wyśrodkuj mapę na twojej lokalizacji",
-    "Change map background": "Zmień podkład mapy",
     "Change tilelayers": "Zmień podkład",
     "Change": "Zmiana",
     "Choose the data format": "Wybierz format danych",
@@ -457,7 +456,6 @@
     "Choose this dataset": "Wybierz ten zbiór danych",
     "GeoDataMine: thematic data from OpenStreetMap": "GeoDataMine: thematic data from OpenStreetMap",
     "Choose a theme": "Wybierz motyw",
-    "Symplify all geometries to points": "Symplify all geometries to points",
     "Choose this data": "Wybierz te dane",
     "Search admin boundary": "Search admin boundary",
     "Please choose a theme and a boundary first.": "Please choose a theme and a boundary first.",
@@ -538,5 +536,12 @@
     "Images": "Images",
     "Iframes": "Iframes",
     "Tags": "Tags",
-    "Geocode": "Geocode"
+    "Geocode": "Geocode",
+    "Display the back to home icon": "Display the back to home icon",
+    "Do you want to display layer switcher in caption bar?": "Do you want to display layer switcher in caption bar?",
+    "Simplify all geometries to points": "Simplify all geometries to points",
+    "Back to list": "Back to list",
+    "Toggle rule": "Toggle rule",
+    "Delete rule": "Delete rule",
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
 }
