--- a/umap/static/umap/locale/pt_BR.json
+++ b/umap/static/umap/locale/pt_BR.json
@@ -45,7 +45,6 @@
     "Cache proxied request": "Pedido cache com proxy",
     "Caption": "Cabeçalho",
     "Center map on your location": "Centrar mapa na sua localização",
-    "Change map background": "Mudar fundo do mapa",
     "Change tilelayers": "Alterar camadas de telas",
     "Change": "Change",
     "Choose the data format": "Escolha o formato dos dados",
@@ -457,7 +456,6 @@
     "Choose this dataset": "Choose this dataset",
     "GeoDataMine: thematic data from OpenStreetMap": "GeoDataMine: thematic data from OpenStreetMap",
     "Choose a theme": "Choose a theme",
-    "Symplify all geometries to points": "Symplify all geometries to points",
     "Choose this data": "Choose this data",
     "Search admin boundary": "Search admin boundary",
     "Please choose a theme and a boundary first.": "Please choose a theme and a boundary first.",
@@ -538,5 +536,12 @@
     "Images": "Images",
     "Iframes": "Iframes",
     "Tags": "Tags",
-    "Geocode": "Geocode"
+    "Geocode": "Geocode",
+    "Display the back to home icon": "Display the back to home icon",
+    "Do you want to display layer switcher in caption bar?": "Do you want to display layer switcher in caption bar?",
+    "Simplify all geometries to points": "Simplify all geometries to points",
+    "Back to list": "Back to list",
+    "Toggle rule": "Toggle rule",
+    "Delete rule": "Delete rule",
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
 }
