--- a/umap/static/umap/locale/en.json
+++ b/umap/static/umap/locale/en.json
@@ -543,5 +543,6 @@
     "Back to list": "Back to list",
     "Toggle rule": "Toggle rule",
     "Delete rule": "Delete rule",
-    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes.",
+    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting."
 }
