--- a/umap/static/umap/locale/br.json
+++ b/umap/static/umap/locale/br.json
@@ -526,22 +526,49 @@
     "Edit map default view": "Edit map default view",
     "Use current center and zoom": "Use current center and zoom",
     "Layer permalink": "Layer permalink",
-    "Back to home": "Back to home",
-    "Home logo": "Home logo",
-    "Add this geometry to my map": "Add this geometry to my map",
-    "Add this place to my map": "Add this place to my map",
-    "Cancel last edit": "Cancel last edit",
-    "Redo last edit": "Redo last edit",
-    "Links": "Links",
-    "Images": "Images",
+    "Back to home": "Distreiñ d'an degemer",
+    "Home logo": "Logo an degemer",
+    "Add this geometry to my map": "Ouzhpennañ ar c'heometriezh-mañ d'am c'hartenn",
+    "Add this place to my map": "Ouzhpennañ al lec'h-mañ d'am c'hartenn",
+    "Cancel last edit": "Nullañ ar c'hemm diwezhañ",
+    "Redo last edit": "Adober ar c'hemm diwezhañ",
+    "Links": "Liammoù",
+    "Images": "Skeudennoù",
     "Iframes": "Iframes",
-    "Tags": "Tags",
+    "Tags": "Tikedennoù",
     "Geocode": "Geocode",
-    "Display the back to home icon": "Display the back to home icon",
+    "Display the back to home icon": "Diskouez ar bouton \"distreiñ d'an degemer\"",
     "Do you want to display layer switcher in caption bar?": "Do you want to display layer switcher in caption bar?",
     "Simplify all geometries to points": "Simplify all geometries to points",
-    "Back to list": "Back to list",
+    "Back to list": "Distreiñ d'al listenn",
     "Toggle rule": "Toggle rule",
-    "Delete rule": "Delete rule",
-    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
+    "Delete rule": "Dilemel ar reolenn",
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes.",
+    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
+    "More help resources": "More help resources",
+    "This map is a template": "This map is a template",
+    "Add text along path": "Add text along path",
+    "Text color": "Text color",
+    "Text offset": "Text offset",
+    "Text position": "Text position",
+    "start": "start",
+    "center": "center",
+    "end": "end",
+    "Text repeat": "Text repeat",
+    "Text rotate": "Text rotate",
+    "Text size": "Text size",
+    "Load map template": "Load map template",
+    "Use a template to initialize your map": "Use a template to initialize your map",
+    "My templates": "My templates",
+    "From staff": "From staff",
+    "From community": "From community",
+    "Include template data, if any": "Include template data, if any",
+    "Load this template": "Load this template",
+    "Open": "Open",
+    "You must select a template.": "You must select a template.",
+    "Line decoration": "Line decoration",
+    "Reuse this template": "Reuse this template",
+    "Create a new map using this template": "Create a new map using this template",
+    "Save template": "Save template",
+    "Load template": "Load template"
 }
