--- a/umap/static/umap/locale/br.json
+++ b/umap/static/umap/locale/br.json
@@ -404,7 +404,7 @@
     "Max": "Brasañ",
     "From": "Adalek",
     "Until": "Betek",
-    "Example: key1,key2|Label 2,key3|Label 3|checkbox": "Example: key1,key2|Label 2,key3|Label 3|checkbox",
+    "Example: key1,key2|Label 2,key3|Label 3|checkbox": "Skouer: key1,key2|Label 2,key3|Label 3|checkbox",
     "Edit in OpenStreetMap": "Kemmañ e-barzh OpenStreetMap",
     "Cannot determine latitude and longitude columns.": "Cannot determine latitude and longitude columns.",
     "Back to layers": "Distreiñ d'ar gwiskadoù",
@@ -513,7 +513,7 @@
     "Successfully imported {count} feature(s)": "{count} elfenn bet enporzhiet gant berzh",
     "Disconnected": "Digennasket",
     "You must be logged in": "Ret eo deoc'h bezañ kennasket",
-    "on hover": "on hover",
+    "on hover": "pa dremen al logodenn war-c'hore",
     "Cannot load remote data for layer \"{layer}\" with url \"{url}\"": "Cannot load remote data for layer \"{layer}\" with url \"{url}\"",
     "Cannot parse remote data for layer \"{layer}\" with url \"{url}\"": "Cannot parse remote data for layer \"{layer}\" with url \"{url}\"",
     "Import failed: invalid data": "Enporzhiadur c'hwitet: roadennoù direizh",
@@ -523,9 +523,9 @@
     "Default zoom": "Zoum dre ziouer",
     "Default latitude": "Ledred dre ziouer",
     "Default longitude": "Hedred dre ziouer",
-    "Edit map default view": "Edit map default view",
-    "Use current center and zoom": "Use current center and zoom",
-    "Layer permalink": "Layer permalink",
+    "Edit map default view": "Kemmañ gwel dre ziouer ar gartenn",
+    "Use current center and zoom": "Implij ar c'hreiz hag ar zoum a-vremañ",
+    "Layer permalink": "Liamm padus ar gwiskad",
     "Back to home": "Distreiñ d'an degemer",
     "Home logo": "Logo an degemer",
     "Add this geometry to my map": "Ouzhpennañ ar c'heometriezh-mañ d'am c'hartenn",
@@ -545,30 +545,30 @@
     "Delete rule": "Dilemel ar reolenn",
     "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes.",
     "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
-    "More help resources": "More help resources",
-    "This map is a template": "This map is a template",
-    "Add text along path": "Add text along path",
-    "Text color": "Text color",
-    "Text offset": "Text offset",
-    "Text position": "Text position",
-    "start": "start",
-    "center": "center",
-    "end": "end",
-    "Text repeat": "Text repeat",
-    "Text rotate": "Text rotate",
-    "Text size": "Text size",
-    "Load map template": "Load map template",
-    "Use a template to initialize your map": "Use a template to initialize your map",
-    "My templates": "My templates",
-    "From staff": "From staff",
-    "From community": "From community",
-    "Include template data, if any": "Include template data, if any",
-    "Load this template": "Load this template",
-    "Open": "Open",
-    "You must select a template.": "You must select a template.",
+    "More help resources": "Titouroù skoazell all",
+    "This map is a template": "Ur patrom eo ar gartenn-mañ",
+    "Add text along path": "Ouzhpennañ an destenn a-hed al linenn",
+    "Text color": "Liv an destenn",
+    "Text offset": "Dilec'h an destenn",
+    "Text position": "Lec'hiadur an destenn",
+    "start": "deroù",
+    "center": "kreiz",
+    "end": "dibenn",
+    "Text repeat": "Adskrivañ an destenn",
+    "Text rotate": "C'hwelañ an destenn",
+    "Text size": "Ment an destenn",
+    "Load map template": "Kargañ patrom ar gartenn",
+    "Use a template to initialize your map": "Implijit ur patrom evit deraouiñ ho kartenn",
+    "My templates": "Ma fatromoù",
+    "From staff": "Erbedet",
+    "From community": "Eus ar gumuniezh",
+    "Include template data, if any": "Lakaat titouroù ar patrom e-barzh, ma'z eus anezho",
+    "Load this template": "Kargañ ar patrom-mañ",
+    "Open": "Digor",
+    "You must select a template.": "Dav eo deoc'h diuzañ ur patrom.",
     "Line decoration": "Line decoration",
-    "Reuse this template": "Reuse this template",
-    "Create a new map using this template": "Create a new map using this template",
-    "Save template": "Save template",
-    "Load template": "Load template"
+    "Reuse this template": "Adimplij ar patrom-mañ",
+    "Create a new map using this template": "Krouiñ ur gartenn nevez en ur implij ar patrom-mañ",
+    "Save template": "Enrollañ ar patrom",
+    "Load template": "Kargañ ar patrom"
 }
