--- a/umap/static/umap/locale/es.json
+++ b/umap/static/umap/locale/es.json
@@ -545,30 +545,30 @@
     "Delete rule": "Eliminar regla",
     "Cannot save layer, please try again in a few minutes.": "No se puede guardar la capa, por favor intenta de nuevo en unos minutos.",
     "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activa la edición colaborativa en vivo en este mapa. Otros usuarios deben recargar el mapa después de cambiar esta configuración.",
-    "More help resources": "More help resources",
-    "This map is a template": "This map is a template",
-    "Add text along path": "Add text along path",
-    "Text color": "Text color",
-    "Text offset": "Text offset",
-    "Text position": "Text position",
-    "start": "start",
-    "center": "center",
-    "end": "end",
-    "Text repeat": "Text repeat",
-    "Text rotate": "Text rotate",
-    "Text size": "Text size",
-    "Load map template": "Load map template",
-    "Use a template to initialize your map": "Use a template to initialize your map",
-    "My templates": "My templates",
-    "From staff": "From staff",
-    "From community": "From community",
-    "Include template data, if any": "Include template data, if any",
-    "Load this template": "Load this template",
-    "Open": "Open",
-    "You must select a template.": "You must select a template.",
-    "Line decoration": "Line decoration",
-    "Reuse this template": "Reuse this template",
-    "Create a new map using this template": "Create a new map using this template",
-    "Save template": "Save template",
-    "Load template": "Load template"
+    "More help resources": "Más recursos de ayuda",
+    "This map is a template": "Este mapa es una plantilla",
+    "Add text along path": "Agregar texto a lo largo del trazo",
+    "Text color": "Color del texto",
+    "Text offset": "Desplazamiento del texto",
+    "Text position": "Posición del texto",
+    "start": "inicio",
+    "center": "centro",
+    "end": "final",
+    "Text repeat": "Repetir texto",
+    "Text rotate": "Rotar texto",
+    "Text size": "Tamaño del texto",
+    "Load map template": "Cargar plantilla de mapa",
+    "Use a template to initialize your map": "Usar una plantilla para iniciar tu mapa",
+    "My templates": "Mis plantillas",
+    "From staff": "Del staff",
+    "From community": "De la comunidad",
+    "Include template data, if any": "Incluir datos de la plantilla, si los hay",
+    "Load this template": "Cargar esta plantilla",
+    "Open": "Abrir",
+    "You must select a template.": "Debes seleccionar una plantilla.",
+    "Line decoration": "Decoración de línea",
+    "Reuse this template": "Reutilizar esta plantilla",
+    "Create a new map using this template": "Crear un nuevo mapa usando esta plantilla",
+    "Save template": "Guardar plantilla",
+    "Load template": "Cargar plantilla"
 }
