--- a/umap/static/umap/locale/it.json
+++ b/umap/static/umap/locale/it.json
@@ -330,7 +330,7 @@
     "Table": "Tabella",
     "Text color for the cluster label": "Colore di testo per l'etichetta del raggruppamento",
     "Text formatting": "Formattazione testo",
-    "The name of the property to use as feature label (eg.: \"nom\"). You can also use properties inside brackets to use more than one or mix with static content (eg.: \"&lcub;name&rcub; in &lcub;place&rcub;\")": "The name of the property to use as feature label (eg.: \"nom\"). You can also use properties inside brackets to use more than one or mix with static content (eg.: \"&lcub;name&rcub; in &lcub;place&rcub;\")",
+    "The name of the property to use as feature label (eg.: \"nom\"). You can also use properties inside brackets to use more than one or mix with static content (eg.: \"&lcub;name&rcub; in &lcub;place&rcub;\")": "Il nome della proprietà da usare come etichetta per l’elemento (ad es. \"nome\"). Puoi anche usare proprietà tra parentesi per specificarne più di una oppure combinarle con contenuti statici (ad es. “&lcub;nome&rcub; in &lcub;luogo&rcub;”)",
     "The name of the property to use as feature unique identifier.": "Nome della proprietà da utilizzare come identificatore univoco per ogni oggetto.",
     "The zoom and center have been modified.": "Lo zoom e il centro sono stati modificati",
     "TMS format": "formato TMS",
@@ -410,21 +410,21 @@
     "Back to layers": "Torna ai livelli",
     "Filters": "Filtri",
     "Comma separated list of properties to use when filtering features by text input": "Lista di proprietà separate da virgola da utilizzare quando il filtro è impostato su testo ",
-    "Comma separated list of properties to use for filters (eg.: mykey,otherkey). To control label, add it after a | (eg.: mykey|My Key,otherkey|Other Key). To control input field type, add it after another | (eg.: mykey|My Key|checkbox,otherkey|Other Key|datetime). Allowed values for the input field type are checkbox (default), radio, number, date and datetime.": "Comma separated list of properties to use for filters (eg.: mykey,otherkey). To control label, add it after a | (eg.: mykey|My Key,otherkey|Other Key). To control input field type, add it after another | (eg.: mykey|My Key|checkbox,otherkey|Other Key|datetime). Allowed values for the input field type are checkbox (default), radio, number, date and datetime.",
+    "Comma separated list of properties to use for filters (eg.: mykey,otherkey). To control label, add it after a | (eg.: mykey|My Key,otherkey|Other Key). To control input field type, add it after another | (eg.: mykey|My Key|checkbox,otherkey|Other Key|datetime). Allowed values for the input field type are checkbox (default), radio, number, date and datetime.": "La lista separata da virgola delle proprietà da usare come filtro (ad es. chiave1,chiave2). Per impostare l’etichetta, aggiungila dopo un carattere | (ad es. chiave1|Mia chiave 1,chiave2|Mia chiave 2). Per impostare il tipo di input del campo, aggiungilo dopo un altro carattere | (ad es. chiave1|Mia chiave 1|checkbox,chiave2|Mia chiave 2|datetime). I valori ammessi per i tipi di input dei campi sono checkbox (predefinito), radio, number, date e datetime.",
     "Search keys": "Chiavi di ricerca",
     "Filters keys": "Filtro sui campi",
     "Filter data": "Filtra dati",
     "Search map features…": "Cerca elementi della mappa…",
     "Reset all": "Reimposta tutto",
     "Open browser": "Apri browser",
-    "Open caption": "Open caption",
+    "Open caption": "Apri didascalia",
     "Your map has been created with an anonymous account!": "La tua mappa è stata creata con un account anonimo!",
     "Real-time collaboration": "Collaborazione in tempo reale",
     "Cannot parse data": "Impossibile analizzare i dati",
     "Start typing...": "Inizia a scrivere...",
     "No result": "Nessun risultato",
     "Data browser": "Browser dei dati",
-    "When providing an URL, uMap can copy the remote data in a layer, or add this URL as remote source of the layer. In that case, data will always be fetched from that URL, and thus be up to date, but it will not be possible to edit it inside uMap.": "When providing an URL, uMap can copy the remote data in a layer, or add this URL as remote source of the layer. In that case, data will always be fetched from that URL, and thus be up to date, but it will not be possible to edit it inside uMap.",
+    "When providing an URL, uMap can copy the remote data in a layer, or add this URL as remote source of the layer. In that case, data will always be fetched from that URL, and thus be up to date, but it will not be possible to edit it inside uMap.": "Quando viene fornito un URL, uMap può copiare i dati remoti in un layer oppure aggiungere questo URL come fonte remota per il layer. In quel caso, i dati verranno sempre scaricati da quell’URL e quindi saranno aggiornati, ma non potranno essere modificati su uMap.",
     "Overpass supported expressions": "Espressioni di Overpass supportate",
     "key (eg. building)": "chiave (es. building)",
     "!key (eg. !name)": "!chiave (es. !name)",
@@ -454,11 +454,11 @@
     "✅ Copied!": "✅ Copiato!",
     "Choose a dataset": "Scegli un dataset",
     "Choose this dataset": "Scegli questo dataset",
-    "GeoDataMine: thematic data from OpenStreetMap": "GeoDataMine: thematic data from OpenStreetMap",
+    "GeoDataMine: thematic data from OpenStreetMap": "GeoDataMine: dati tematici da OpenstreetMap",
     "Choose a theme": "Seleziona un tema",
     "Choose this data": "Seleziona questi dati",
     "Search admin boundary": "Cerca confini amministrativi",
-    "Please choose a theme and a boundary first.": "Please choose a theme and a boundary first.",
+    "Please choose a theme and a boundary first.": "Prima scegli un tema e un confine.",
     "Expression": "Espressione",
     "Geometry mode": "Modalità geometria",
     "Only geometry centers": "Solo i centri delle geometrie",
@@ -473,7 +473,7 @@
     "Color palette": "Palette di colori",
     "Categories": "Categorie",
     "Comma separated list of categories.": "Lista di categorie separate da virgola.",
-    "Categories mode": "Categories mode",
+    "Categories mode": "Modalità categorie",
     "Remove filter for this column": "Rimuovi filtri da questa colonna",
     "Add filter for this column": "Aggiungi filtri a questa colonna",
     "Rename this column": "Rinomina questa colonna",
@@ -491,7 +491,7 @@
     "Property name to compute circles": "Proprietà per cui calcolare i cerchi",
     "Min circle radius": "Raggio minimo del cerchio",
     "Max circle radius": "Raggio massimo del cerchio",
-    "Display the open browser control": "Display the open browser control",
+    "Display the open browser control": "Mostra il controllo apri browser",
     "Copy as GeoJSON": "Copia come GeoJSON",
     "Please zoom in to edit the geometry": "Ingrandisci per modificare la geometria",
     "New map": "Nuova mappa",
@@ -499,49 +499,76 @@
     "My teams": "I miei gruppi",
     "My profile": "Il mio profilo",
     "Type new owner's username": "Inserisci il nome utente del nuovo proprietario",
-    "Type editor's username": "Type editor's username",
+    "Type editor's username": "Inserisci il nome utente del contributore",
     "Map": "Mappa",
     "Manage collaborators": "Gestisci chi può collaborare",
     "show/hide all layers": "mostra/nascondi tutti i livelli",
     "zoom to data extent": "ingrandisci sull'area dei dati",
     "download visible data": "scarica i dati visibili",
-    "Import helpers": "Import helpers",
-    "Import helpers will fill the URL field for you.": "Import helpers will fill the URL field for you.",
+    "Import helpers": "Importa guide",
+    "Import helpers will fill the URL field for you.": "Importando le guide il campo URL verrà compilato automaticamente.",
     "Wikipedia": "Wikipedia",
     "Save draft": "Salva bozza",
     "No data has been found for import": "Non sono stati trovati dati da importare",
-    "Successfully imported {count} feature(s)": "Successfully imported {count} feature(s)",
+    "Successfully imported {count} feature(s)": "Importato con successo {count} elemento/i",
     "Disconnected": "Scollegato",
     "You must be logged in": "Devi aver effettuato l’accesso",
-    "on hover": "on hover",
-    "Cannot load remote data for layer \"{layer}\" with url \"{url}\"": "Cannot load remote data for layer \"{layer}\" with url \"{url}\"",
-    "Cannot parse remote data for layer \"{layer}\" with url \"{url}\"": "Cannot parse remote data for layer \"{layer}\" with url \"{url}\"",
+    "on hover": "al passaggio del mouse",
+    "Cannot load remote data for layer \"{layer}\" with url \"{url}\"": "Impossibile caricare i dati remoti per il layer “{layer}” con URL “{url}”",
+    "Cannot parse remote data for layer \"{layer}\" with url \"{url}\"": "Impossibile analizzare i dati remoti per il layer “{layer}” con URL “{url}”",
     "Import failed: invalid data": "Import fallito: dati non validi",
     "Anonymous": "Anonimo",
-    "created at {date}": "created at {date}",
-    "modified at {date}": "modified at {date}",
-    "Default zoom": "Default zoom",
-    "Default latitude": "Default latitude",
-    "Default longitude": "Default longitude",
-    "Edit map default view": "Edit map default view",
-    "Use current center and zoom": "Use current center and zoom",
-    "Layer permalink": "Layer permalink",
-    "Back to home": "Back to home",
-    "Home logo": "Home logo",
-    "Add this geometry to my map": "Add this geometry to my map",
-    "Add this place to my map": "Add this place to my map",
-    "Cancel last edit": "Cancel last edit",
-    "Redo last edit": "Redo last edit",
-    "Links": "Links",
-    "Images": "Images",
-    "Iframes": "Iframes",
-    "Tags": "Tags",
+    "created at {date}": "creato il {date}",
+    "modified at {date}": "modificato il {date}",
+    "Default zoom": "Zoom predefinito",
+    "Default latitude": "Latitudine predefinita",
+    "Default longitude": "Longitudine predefinita",
+    "Edit map default view": "Modifica la vista predefinita della mappa",
+    "Use current center and zoom": "Usa centro e zoom attuali",
+    "Layer permalink": "Permalink del layer",
+    "Back to home": "Torna alla home",
+    "Home logo": "Logo della home",
+    "Add this geometry to my map": "Aggiungi questa geometria alla mia mappa",
+    "Add this place to my map": "Aggiungi questo posto alla mia mappa",
+    "Cancel last edit": "Annulla ultima modifica",
+    "Redo last edit": "Rifai ultima modifica",
+    "Links": "Collegamenti",
+    "Images": "Immagini",
+    "Iframes": "Iframe",
+    "Tags": "Etichette",
     "Geocode": "Geocode",
-    "Display the back to home icon": "Display the back to home icon",
-    "Do you want to display layer switcher in caption bar?": "Do you want to display layer switcher in caption bar?",
-    "Simplify all geometries to points": "Simplify all geometries to points",
-    "Back to list": "Back to list",
-    "Toggle rule": "Toggle rule",
-    "Delete rule": "Delete rule",
-    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
+    "Display the back to home icon": "Mostra l’icona per tornare alla home",
+    "Do you want to display layer switcher in caption bar?": "Vuoi mostrare il commutatore dei layer nella didascalia?",
+    "Simplify all geometries to points": "Semplifica tutte le geometrie con punti",
+    "Back to list": "Torna alla lista",
+    "Toggle rule": "Commuta regola",
+    "Delete rule": "Cancella regola",
+    "Cannot save layer, please try again in a few minutes.": "Impossibile salvare il layer, prova di nuovo tra qualche minuto.",
+    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
+    "More help resources": "Altre risorse dell'help",
+    "This map is a template": "Questa mappe è un template ",
+    "Add text along path": "Add text along path",
+    "Text color": "Colore del testo",
+    "Text offset": "Text offset",
+    "Text position": "Posizione del testo",
+    "start": "inizio",
+    "center": "centro",
+    "end": "fine",
+    "Text repeat": "Ripeti testo",
+    "Text rotate": "Ruota testo",
+    "Text size": "Dimensioni testo",
+    "Load map template": "Load map template",
+    "Use a template to initialize your map": "Usa un template per inizializzare la mappa",
+    "My templates": "My templates",
+    "From staff": "Dallo staff",
+    "From community": "Dalla community",
+    "Include template data, if any": "Include template data, if any",
+    "Load this template": "Carica questo template",
+    "Open": "Apri",
+    "You must select a template.": "Devi selezionare un template",
+    "Line decoration": "Line decoration",
+    "Reuse this template": "Reuse this template",
+    "Create a new map using this template": "Create a new map using this template",
+    "Save template": "Save template",
+    "Load template": "Load template"
 }
