--- a/umap/static/umap/locale/nl.json
+++ b/umap/static/umap/locale/nl.json
@@ -119,7 +119,7 @@
     "Do you want to display a caption bar?": "Wil je een hoofding tonen?",
     "Do you want to display a minimap?": "Wil je een minikaartje tonen?",
     "Do you want to display a panel on load?": "Wil je een zijpaneel tonen als de kaart geladen wordt?",
-    "Do you want to display caption menus?": "Do you want to display caption menus?",
+    "Do you want to display caption menus?": "Wil je een menu met bijschriften weergeven?",
     "Do you want to display popup footer?": "Wil je een popup-footer tonen?",
     "Do you want to display the scale control?": "Wil je het schaal-besturingselement tonen?",
     "Do you want to display the «more» control?": "Wil je de knop «meer» laten zien?",
@@ -189,7 +189,7 @@
     "Inherit": "Overerving",
     "inherit": "overerven",
     "Interaction options": "Opties voor interactie",
-    "Invalid latitude or longitude": "Invalid latitude or longitude",
+    "Invalid latitude or longitude": "Incorrecte lengte- of breedtegraad",
     "Invalid umap data in {filename}": "Incorrecte umap data in {filename}",
     "Invalid umap data": "Incorrecte umap data",
     "Jenks-Fisher": "Jenks-Fisher",
@@ -268,8 +268,8 @@
     "parent window": "bovenliggend venster",
     "Paste your data here": "Plak je data hier",
     "Permalink": "Permalink",
-    "Permanent credits background": "Permanent credits background",
-    "Permanent credits": "Permanent credits",
+    "Permanent credits background": "Permanente bronverwijzing achtergrond",
+    "Permanent credits": "Permanente bronverwijzing",
     "Please be sure the licence is compliant with your use.": "Zorg er aub voor dat je je aan de licentievoorwaarden houdt",
     "Please choose a format": "Kies een formaat",
     "Please enter the name of the property": "Vul de naam in van de eigenschap",
@@ -425,7 +425,7 @@
     "No result": "Geen resultaat",
     "Data browser": "Data browser",
     "When providing an URL, uMap can copy the remote data in a layer, or add this URL as remote source of the layer. In that case, data will always be fetched from that URL, and thus be up to date, but it will not be possible to edit it inside uMap.": "Bij het verstrekken van een URL kan uMap de externe data in een laag kopiëren, of deze URL toevoegen als externe bron van de laag. In dat geval worden de data altijd van die URL opgehaald en dus up-to-date, maar is het niet mogelijk om ze in uMap te bewerken.",
-    "Overpass supported expressions": "Overpass Ondersteunde expressies",
+    "Overpass supported expressions": "Ondersteunde Overpass uitdrukkingen",
     "key (eg. building)": "sleutel (bijv. gebouw)",
     "!key (eg. !name)": "!sleutel (bv. !naam)",
     "key=value (eg. building=yes)": "sleutel=waarde (bv. gebouw=ja)",
@@ -540,8 +540,35 @@
     "Display the back to home icon": "Het pictogram Terug naar huis weergeven",
     "Do you want to display layer switcher in caption bar?": "Wilt u de laagwisselaar weergeven in de ondertitelingsbalk?",
     "Simplify all geometries to points": "Vereenvoudig alle geometrieën tot punten",
-    "Back to list": "Back to list",
-    "Toggle rule": "Toggle rule",
-    "Delete rule": "Delete rule",
-    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
+    "Back to list": "Terug naar lijst",
+    "Toggle rule": "Regel wisselen",
+    "Delete rule": "Verwijder regel",
+    "Cannot save layer, please try again in a few minutes.": "Kan de laag niet opslaan, probeer het over een paar minuten opnieuw.",
+    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activeer samen live editeren voor deze kaart. Anderen moeten de kaart vernieuwen vooraleer dit actief wordt bij hen.",
+    "More help resources": "Meer hulpbronnen",
+    "This map is a template": "Deze kaart is een sjabloon",
+    "Add text along path": "Een tekst langs een pad",
+    "Text color": "Tekst kleur",
+    "Text offset": "Tekst offset",
+    "Text position": "Tekst positie",
+    "start": "start",
+    "center": "center",
+    "end": "einde",
+    "Text repeat": "Tekst herhaling",
+    "Text rotate": "Tekst draaien",
+    "Text size": "Tekst grootte",
+    "Load map template": "Laad een sjabloonkaart",
+    "Use a template to initialize your map": "Gebruik een sjabloon om de kaart op te zetten",
+    "My templates": "Mijn sjablonen",
+    "From staff": "Van de beheerders",
+    "From community": "Van de community",
+    "Include template data, if any": "Voeg ook data van het sjabloon toe, indien beschikbaar",
+    "Load this template": "Dit sjabloon laden",
+    "Open": "Openen",
+    "You must select a template.": "Je moet een sjabloon kiezen",
+    "Line decoration": "Lijn tekenstijl",
+    "Reuse this template": "Hergebruik dit sjabloon",
+    "Create a new map using this template": "Maak een nieuwe kaart met dit sjabloon",
+    "Save template": "Sla sjabloon op",
+    "Load template": "Laad sjabloon"
 }
